extra test for XMIR